# Attendance-System

./: .gitignore  docker-compose.yml
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Header.tsx  Loading.tsx  Message.tsx  StudentLogin.tsx  StudentRegistration.tsx  TeacherLogin.tsx  TeacherRegistration.tsx
frontend/src/pages/: Landing.tsx  Student.tsx  StudentEnroll.tsx  Teacher.tsx  TeacherDashboard.tsx
frontend/src/store/: authStore.ts  uiStore.ts
frontend/src/utils/: api.ts  axiosInstance.ts
server/: .dockerignore  AttendanceAi.py  Dockerfile  main.py  pyproject.toml  requirements.txt
server/models/: models.py
server/utils/: auth.py  db.py
